--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<!-- Particle canvas overlay -->
+<canvas id="particle-canvas"></canvas>
+
 <!-- Start Screen -->
 <div id="start-screen" class="screen">
   <h1>🐷 GREEDY PIG 🎲</h1>
@@ -17,8 +20,8 @@
     <p>
       Roll the dice and collect points! Everyone starts <strong>IN</strong>.  
       Each roll adds the dice number to every player still in.  
-      If a <strong>4</strong> is rolled, the round ends immediately and all "in" players get 0 for that round!  
-      Players can click their name to go <strong>OUT</strong>, keeping their points but stopping earning for this round.  
+      If a <strong>4</strong> is rolled, the round ends immediately and all "in" players get 0!  
+      Players can click their name to go <strong>OUT</strong>.  
       The game lasts 3, 5, or 10 rounds. Highest total wins!
     </p>
   </div>
